[tool.poetry]
name = "atp-tools"
version = "0.1.0"
description = "All the Patents tooling"
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
transformers = "^4.38.2"
accelerate = "^0.27.2"
httpx = "^0.27.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
