[tool.poetry]
name = "atp-tools"
version = "0.1.0"
description = "All the Patents tooling"
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
transformers = "^4.39.1"
accelerate = "^0.28.0"
httpx = "^0.27.0"
black = "^24.3.0"
vllm = "^0.3.3"
openai = "^1.14.2"
fastapi = "^0.110.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
